# Recon

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  LICENSE  Makefile  README.md  ReconPlatform.sln  TASKS.md  pyproject.toml  requirements.txt
.claude/: context.md
.claude/commands/: build.md  new-connector.md  phase-done.md  task.md  test.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
agent/: Dockerfile  config.yaml  conftest.py  main.py  orchestrator.py  query_builder.py  requirements.txt  test_query_builder.py  tools.py
docs/: configuration.md  deployment.md  extending-skills.md  setup.md  soc2-checklist.md  source-catalog.md
infra/: main.bicep  main.bicepparam
infra/modules/: container-apps.bicep  cosmos.bicep  key-vault.bicep  log-analytics.bicep  monitoring.bicep  service-bus.bicep  sql.bicep  storage.bicep  synapse.bicep
plugins/: ExamplePlugin.cs  README.md
skills/: README.md  asset-enrichment.yaml
skills/agents/: scope-validator.yaml
src/ReconPlatform.Api/: Program.cs  ReconPlatform.Api.csproj
src/ReconPlatform.Config/: ReconPlatform.Config.csproj  SecretResolver.cs  TeamConfigSerializer.cs  TeamConfigValidator.cs  ValidationResult.cs  YamlEnumConverter.cs
src/ReconPlatform.Connectors/: AzureAdxConnector.cs  AzureSqlConnector.cs  ConnectorRateLimiter.cs  PluginLoader.cs  ReconPlatform.Connectors.csproj  RestApiConnector.cs
src/ReconPlatform.Engine/: DeduplicationEngine.cs  DiffEngine.cs  Normalizer.cs  ReconPlatform.Engine.csproj  (+2 more)
(+59 files in other folders)
